# stratos-investment-assistant

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  instructions.md
.claude/agents/: README.md  deep-reflector.md  deployment-specialist.md  documentation-validator.md  flutter-specialist.md  framework-advisor.md  gh-manager.md  gold-standards-validator.md  intermediate-reviewer.md  security-auditor.md  todo-manager.md  ui-engineer.md
.claude/commands/: ai-eval.md  build-fix.md  checkpoint.md  code-review.md  create-command.md  deploy.md  design.md  e2e.md  eval.md  learn.md  no-stubs.md  orchestrate.md  plan.md  real-testing.md  refactor-clean.md  sdk.md  setup-pm.md  tdd.md  test-coverage.md  update-codemaps.md  update-docs.md  verify.md
.claude/mcp-configs/: aws-mcp.json  azure-mcp.json  gcp-mcp.json  jira-mcp.json  linear-mcp.json
backend/: .env.example  .railwayignore  pyproject.toml  railway.toml  requirements.txt
backend/api/: main.py
backend/api/routes/: alerts.py  analysis.py  health.py  portfolio.py  preferences.py  stocks.py
backend/models/: database.py  preferences.py
backend/services/: ai_service.py  stock_service.py
backend/tests/: conftest.py  test_health.py  test_preferences.py  test_stocks.py
docs/: 01-project-overview.md
docs/checkpoints/: 2026-01-26-initial-project-setup.md  2026-01-26-phase2-real-data-integration.md  2026-01-26-phase3-ai-and-portfolio.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
frontend/src/app/: layout.tsx  page.test.tsx  (+1 more)
(+8 files in other folders)
